# DCT-19264165-6bb2-4de9-b3b1-156c1791bcf2

./: CMakeLists.txt  LICENSE.txt  README.md  main.c
actions/: CMakeLists.txt  actions.h  compress.c  expand.c  quantize.c  transform.c
include/: dct.h
kernels/: add.cl
modules/compute/: CMakeLists.txt  compute.h  opencl.c
modules/io/: CMakeLists.txt  file.c  io.h  png.c
modules/linalg/: CMakeLists.txt  linalg.c  linalg.h
runtime/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  software.test.c
